--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,26 @@
 spring.application.name=event-booking
 
-# Datasource (MySQL 8+)
-spring.datasource.url=jdbc:mysql://localhost:3306/event_booking?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Admin123
+# === Datasource (Use env vars for flexibility) ===
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
-# JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
+# === JPA / Hibernate ===
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HBM2DDL:update}
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=${SPRING_JPA_HIBERNATE_DIALECT:org.hibernate.dialect.PostgreSQLDialect}
 
-# Allow bean definition overriding (only needed if you had duplicates before)
+# Allow bean definition overriding
 spring.main.allow-bean-definition-overriding=true
-
 spring.main.allow-circular-references=true
 
-
+# Disable Flyway unless you’re using it
 spring.flyway.enabled=false
 
-
-# JWT
-jwt.secret=replace_this_with_a_long_random_secret_at_least_32_chars
+# === JWT ===
+jwt.secret=${JWT_SECRET:replace_this_with_a_long_random_secret_at_least_32_chars}
 jwt.expiration-ms=3600000
 
-# Server port
-server.port=8083
+# Server port (Render provides $PORT automatically, so we respect that)
+server.port=${PORT:8083}
