--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,21 @@
+# application.properties - environment-friendly for Render
+
 spring.application.name=event-booking
 
-# === Datasource (Use env vars for flexibility) ===
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# Datasource (Postgres)
+# Set these env vars on Render: SPRING_DATASOURCE_URL, SPRING_DATASOURCE_USERNAME, SPRING_DATASOURCE_PASSWORD
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/event_booking}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgres}
 
-# === JPA / Hibernate ===
-spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HBM2DDL:update}
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=${SPRING_JPA_HIBERNATE_DIALECT:org.hibernate.dialect.PostgreSQLDialect}
+# Hibernate / JPA
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:false}
 
-# Allow bean definition overriding
-spring.main.allow-bean-definition-overriding=true
-spring.main.allow-circular-references=true
-
-# Disable Flyway unless you’re using it
-spring.flyway.enabled=false
-
-# === JWT ===
+# JWT and server
 jwt.secret=${JWT_SECRET:replace_this_with_a_long_random_secret_at_least_32_chars}
-jwt.expiration-ms=3600000
+jwt.expiration-ms=${JWT_EXPIRATION_MS:3600000}
 
-# Server port (Render provides $PORT automatically, so we respect that)
-server.port=${PORT:8083}
+# Let Render provide the port via PORT env var. Default to 8084 locally.
+server.port=${PORT:8084}
